2.3-M03
-------

Cypher:
o Allow arbitrary expressions for URL in LOAD CSV
o Added reverse function for reversing strings
o Unfulfillable index hints (e.g. on non-existing indices) will now produce a warning or throw an error as configured
o Now supports dynamic property lookup (f.e. using n['property'])
o Usage of bare node patterns is now deprecated
o Range queries can now be solved using index seeks
o Prefer size() over length() for collections and pattern predicates
o Accept lower case 'e' in cypher exponent double literals
o Added support for join hints: USING JOIN ON n
o Added "DETACH DELETE" to Cypher
o Fixes a bug where input positions could become wrong on Windows platforms
o The compiler is now preloaded on db startup, minimizing delay of initial query
o Triadic selection is now supported
o Function exists() can now make use of index scans
o LIMIT now properly influence planning costs
o Generates a warning when dynamic property lookup makes index plans impossible
o New constraint type: property existence for nodes and relationships
o Inequality predicates can now be chained on the form 0 < n.prop < 10
o LIKE and ILIKE has been removed
o ShortestPath should now return paths that fulfil any predicates enforced upon it
o The str() function is now deprecated
o Cypher queries will no longer be logged in messages.log

2.3-M02
-------

Cypher:
o Removed support for Cypher version 2.0 and 2.1, as announced
o Produces error or warning if a query cannot be solved using the specified planner
o Switched to using a new planner based on Iterative Dynamic Programming (IDP)
o Switched to using Scala 2.11
o Cypher now supports two new operators for string pattern matching: LIKE and ILIKE
o It is now possible to escape '_' and '%' in string literals using backslash (for use with LIKE)
o Specifying a default Cypher planner in the settings now only applies to the default language version / parser

2.3-M01
-------

Cypher: